	Fixed: Any task which belongs to the custom DNS records layer must not involve HTTPD configuration change
	Fixed: Bind9 must not be restarted each time a DNS zone is updated. A simple reload is sufficient
	Fixed: In some contexts, configuration files which belongs to subdomains are not regenerated
	Fixed: Some errors are not trapped

CONFIGS
	Added: imscp_daemon, imscp_network and imscp_panel upstart jobs
	Added: libbit-vector-perl package in list of pre-required packages ( Debian / Ubuntu )
	Added: libclass-insideout-perl and libscalar-defer-perl in list of pre-required packages ( Debian / Ubuntu )
	Added: php-apc package ( Debian < Jessie / Ubuntu < Trusty Thar )
	Added: Support for Debian Strech ( testing )
	Changed: Install nginx-light package instead of nginx package
	Fixed: Wrong TMPDIR path ( php5-fpm )
	Removed: INIT_SCRIPTS_DIR, SERVICE_INSTALLER, SERVICE_MNGR, IMSCP_DAEMON_SNAME, IMSCP_NETWORK_SNAME and
		IMSCP_PANEL_SNAME configuration parameters
	Removed: mariadb 5.5 from Debian Jessie package file ( replaced by mariadb 10.0 )
	Renamed: FCGI starter template to php-fcgi-starter ( apache_fcgid server impl. )

DAEMON
	Added: End child syslog message
	Fixed: warning: ignoring return value of ‘chdir’... ( daemon_init.c )
	Fixed: Avoid useless 'fork' and 'wait' by using execl() instead of system() ( lr_syntax.c )
	Updated: Version to 1.2.3

DATABASE
	Added: domain_dns_status field in domain_dns table ( Custom DNS record status field )
	Added: plugin_config_prev field in plugin table ( Plugin previous configuration field )
	Fixed: Missing unique constraint for mail_users entities ( added unique constraint on mail_users.mail_addr )

DISTRIBUTIONS
	Removed: Support for Debian Squeeze ( 6.x ) - Do not fit with new i-MSCP requirements ( Perl version is too old )
	Removed: Support for Ubuntu Lucid Lynx ( 10.04 LTS ) - EOL as per April 30, 2015 ( Server version )

FRONTEND
	Added Custom DNS items in debugger interface ( admin level )