@@ -75,6 +75,7 @@
             <package>mysql-common</package>
         </mysql_5.5>
         <mariadb_10.0
+                repository_conflict="deb http://.*/mariadb/.*"
                 pinning_package="mariadb-client-10.0 mariadb-server-10.0 mariadb-common mysql-common libmysqlclient18"
                 pinning_pin="release o=Debian,n=jessie"
                 pinning_pin_priority="1001"
